# AI-terminal-assistant

./: README.md  pyproject.toml
ai_terminal_assistant/: cli.py
